Correct image size on smaller devices

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -326,11 +326,13 @@ html {
             }
         }
 
-        @media #{$responsive-medium-large} {
+        @media #{$responsive-medium} {
             &.left, &.right {
-                max-width: calc(50% - 1em);
+                max-width: calc(50% - 1em + #{$content-padding});
             }
+        }
 
+        @media #{$responsive-medium-large} {
             &.left {
                 float: left;
                 margin-right: 2em;
@@ -339,6 +341,12 @@ html {
             &.right {
                 float: right;
                 margin-left: 2em;
+            }
+        }
+
+        @media #{$responsive-large} {
+            &.left, &.right {
+                max-width: calc(50% - 1em);
             }
         }
 
